fix: reversed manifest essentials <-> project manager

--- a/project-manager/manifest.json
+++ b/project-manager/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "Essentials",
-  "description": "Essentials module used to execute amazing stuff with just a single function!",
+  "id": "blokkok-project-manager",
+  "name": "Project Manager",
+  "description": "Project Manager module used to manage and display your projects",
   "version": "1",
   "library_version": "0.1",
   "author": "Blokkok",
-  "website": "https://github.com/Blokkok/blokkok-modules/tree/main/essentials/",
-  "classpath": "com.blokkok.mod.essentials.Essentials",
+  "website": "https://github.com/Blokkok/blokkok-modules/tree/main/project-manager/",
+  "classpath": "com.blokkok.mod.project.manager.ProjectManager",
   "jar": "module.jar"
 }
