submodule: update modsys and add dependencies for project-manager

--- a/project-manager/manifest.json
+++ b/project-manager/manifest.json
@@ -2,10 +2,11 @@
   "id": "blokkok-project-manager",
   "name": "Project Manager",
   "description": "Project Manager module used to manage and display your projects",
-  "version": "1",
+  "version": "1.0",
   "library_version": "0.1",
   "author": "Blokkok",
   "website": "https://github.com/Blokkok/blokkok-modules/tree/main/project-manager/",
   "classpath": "com.blokkok.mod.project.manager.ProjectManager",
+  "dependsOn": ["essentials:1.0"],
   "jar": "module.jar"
 }
