fix: wrong dependency name for project manager

--- a/project-manager/manifest.json
+++ b/project-manager/manifest.json
@@ -7,6 +7,6 @@
   "author": "Blokkok",
   "website": "https://github.com/Blokkok/blokkok-modules/tree/main/project-manager/",
   "classpath": "com.blokkok.mod.project.manager.ProjectManager",
-  "dependsOn": ["essentials:1.0"],
+  "dependsOn": ["blokkok-essentials:1.0"],
   "jar": "module.jar"
 }
