feat: use stub for integrating external impl in aapem

--- a/android-app-project-editor/settings.gradle
+++ b/android-app-project-editor/settings.gradle
@@ -13,3 +13,4 @@ include ':module-interface'
 include ':module-bridge-stub'
 project(':module-interface').projectDir = new File(rootDir, '../submodules/blokkok-modsys/module-interface/')
 project(':module-bridge-stub').projectDir = new File(rootDir, '../submodules/blokkok-modsys/module-bridge-stub/')
+include ':aapem-api-stub'
