--- a/simple-layout-editor/module/src/main/AndroidManifest.xml
+++ b/simple-layout-editor/module/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.blokkok.mod.sce">
+    package="com.blokkok.mod.sle">
 
     <application
         android:label="@string/app_name"
