--- a/simple-apk-builder/module/build.gradle
+++ b/simple-apk-builder/module/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compileOnly project(":aapem-stub")
     implementation project(":module-interface")
 
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
