chore: add blokkok-aapem dependency for simple modules

--- a/android-app-project-editor/manifest.json
+++ b/android-app-project-editor/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "blokkok-android-app-projedit",
+  "id": "blokkok-aapem",
   "name": "Android App Project Editor",
   "description": "Android App Project Editor Module (AAPEM) is used to create, and edit android app projects in blokkok!",
   "version": "1.0",
