--- a/simple-apk-builder/manifest.json
+++ b/simple-apk-builder/manifest.json
@@ -7,6 +7,7 @@
   "author": "Blokkok",
   "website": "https://github.com/Blokkok/blokkok-modules/tree/main/simple-apk-builder/",
   "classpath": "com.blokkok.mod.sab.SimpleApkBuilderModule",
+  "depends_on": ["blokkok-aapem:1.0"],
   "assets": "assets",
   "jar": "module.jar"
 }
